fix(css): fix contrast of 9 css examples (#2469)
* Improve contrast pointer events

* fix(css): fix contrast of margin-inline

* fix(css): fix contrast of margin-bottom

* fix(css): fix contrast in margin-block.css

this commit improves the contrast of margin-block, margin-block-start, and margin-block-end

* fix(css): improve contrast of list-style-type

* fix(css): fix contrast of text in list-style-type

* fix(css): fix example link in pointer-events

* fix: change stroke to fill in pointer-events

* remove style list-style-type

* fix: add class to give color list-style-type

* remove style

* fix(css): fix color of text in pointer-events.css

* fix

* fix(css): fix contrast by changing color

* fix:css change color

* Fix lint

---------

--- a/live-examples/css-examples/svg/pointer-events.css
+++ b/live-examples/css-examples/svg/pointer-events.css
@@ -2,6 +2,10 @@
     font-weight: bold;
 }
 
+#example-element a {
+    color: #009e5f;
+}
+
 #example-element svg {
     width: 10em;
     height: 10em;
